# rmp-demo-vision-tracking-gimbal

./: .copilot-instructions.md  .gitignore  CMakeLists.txt  GRPC_STREAMING_README.md  README.md  acA640-300gc_22441779.pfs  et --hard 42d8d40  license.md  readme.md  settings.xml  test_camera_frame.sh  test_grpc_streaming.sh  test_rt_integration.sh  x.xml  y.xml
RTTaskFunctions/: CMakeLists.txt
RTTaskFunctions/src/: rttaskfunctions.cpp  rttaskglobals.h
RTTaskFunctionsTemplate/: CMakeLists.txt  README.md
RTTaskFunctionsTemplate/src/: rttaskglobals.h
RealTimeTasks/: CMakeLists.txt
RealTimeTasks/RTTaskFunctions/: CMakeLists.txt
RealTimeTasks/RTTaskFunctions/src/: rttaskfunctions.cpp  rttaskglobals.h
RealTimeTasks/src/: HelloRTTasks.cpp  RTTasksHelpers.h  RandomWalk.cpp
cmake/: RapidSoftware.cmake
cmake/INtime/: INtimeHelper.cmake  INtime_VS2019_config.cmake  INtime_VS2022_config.cmake
config/: camera.pfs  settings.xml  y.xml
include/: camera_grpc_server.h  camera_helpers.h  image_processing.h  misc_helpers.h  motion_control.h  rmp_helpers.h
include/helpers/: camera_helpers.h  image_helpers.h  misc_helpers.h  rmp_helpers.h  shared_memory_helpers.h  timing_helpers.h
new_rmp_config/: MultiAxis2.xml  rttasks.xml  settings.xml  x.xml  y.xml
rmp_config/: multiaxis.xml  rmp.xml  rttasks.xml  settings.xml  x.xml  y.xml
rttasks/: rttaskfunctions.cpp  rttaskglobals.h
rttasks/include/: shared_data_helpers.h
rttasks/src/: camera_helpers.cpp
sandbox/: sandbox_main.cpp
sandbox/helpers/: image_helpers.cpp  image_helpers.h
scripts/: RapidLaser.json  camera_server_run.sh  rapidlaser_ui_run.sh  run_rapidlaser_desktop.bat  run_rapidlaser_desktop.sh  server_camera_run.sh  tune_system.sh  verify_linux_deps.sh
servers/camera/: HttpCameraServer.cs
src/: SampleAppsHelper.h  Timing.h  camera_grpc_server.cpp  demo_main.cpp  image_processing.cpp  laser_main.cpp  motion_control.cpp  rmp_helpers.cpp  rttasks_demo_main.cpp  sandbox_main.cpp
src/csharp/: HttpCameraServer.cs  README.md  SimpleCameraServer.cs  run.sh
src/helpers/: camera_helpers.cpp  image_helpers.cpp  misc_helpers.cpp  rmp_helpers.cpp
ui/: Directory.Packages.props  RapidLaser.json  RapidLaser.sln
ui/.github/: .copilot-instructions.md  copilot-instructions.md
ui/RapidLaser/: .editorconfig  App.axaml  App.axaml.cs  GlobalUsings.cs  Program.cs  RapidLaser.csproj  RapidLaser.json  ViewLocator.cs
ui/RapidLaser.Android/: MainActivity.cs  RapidLaser.Android.csproj
ui/RapidLaser.Android/Properties/: AndroidManifest.xml
ui/RapidLaser.Browser/: Program.cs  RapidLaser.Browser.csproj
ui/RapidLaser.Browser/Properties/: launchSettings.json
ui/RapidLaser.Browser/wwwroot/: index.html
ui/RapidLaser.Desktop/: Program.cs  RapidLaser.Desktop.csproj  app.manifest
ui/RapidLaser.iOS/: AppDelegate.cs  Info.plist  Main.cs  RapidLaser.iOS.csproj
ui/RapidLaser.iOS/Resources/: LaunchScreen.xib
ui/RapidLaser/Assets/protos/: camera_streaming.proto
ui/RapidLaser/Behaviors/: AutoCompleteBehaviors.cs  ScrollToEndBehavior.cs
ui/RapidLaser/Controls/: LabeledControl.axaml  LabeledControl.axaml.cs  ProgressGoalChart.axaml  ProgressGoalChart.axaml.cs  ProgressRing.axaml  ProgressRing.axaml.cs  StatusLabel.axaml  StatusLabel.axaml.cs  StatusLabel.cs
ui/RapidLaser/Converters/: BoolConverters.cs
ui/RapidLaser/Models/: GlobalValueItem.cs  RtTask.cs
ui/RapidLaser/Resources/: Converters.cs
ui/RapidLaser/Services/: CameraService.cs  ConnectionManagerService.cs  GlobalValueService.cs  GrpcCameraService.cs  GrpcImageProcessingService.cs  HttpCameraService.cs  ICameraService.cs  ImageProcessingService.cs  MockRSIGrpcService.cs  MotionControlService.cs  RSIGrpcService.cs  RSIGrpcService_Mock.cs  RTTaskManagerService.cs  RmpGrpcService.cs  RmpGrpcService_Mock.cs  SshService.cs
ui/RapidLaser/ViewModels/: MainViewModel.cs  ViewModelBase.cs
ui/RapidLaser/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
ui/docs/: progress-ring.md
